# Advanced-Book-Recommandation-System

./: .env.example  .gitignore  .pre-commit-config.yaml  APPLICATION_RUNNING.md  ARCHITECTURE.md  BACKEND_FEATURES_INVENTORY.md  COMPLETE_SETUP_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVOPS_GUIDE.md  Dockerfile  FREE_API_KEYS_GUIDE.md  FRONTEND_COMPLETION_SUMMARY.md  FRONTEND_DEPLOYMENT_GUIDE.md  FRONTEND_IMPROVEMENTS_V3.md  GITHUB_READY_CHECKLIST.md  GITHUB_SUCCESS.md  Makefile  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  REPOSITORY_STRUCTURE.md  SESSION_COMPLETION_REPORT.md  START_HERE.md  TESTING_COMPLETE.md  api.py  app.py  config.py  docker-compose.yml  git_setup.bat  monitor_app.py  nginx.conf  preflight_check.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py  setup_free_apis.py  setup_new_machine.py  start.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml
database/: __init__.py  database.py  models.py
docs/: CHANGELOG.md  CLEANUP_PLAN.md  FEATURE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  ML_ARCHITECTURE_COMPLETE.md  PROJECT_STRUCTURE.md  VERIFICATION_REPORT.md
frontend/: .env.example  FRONTEND_README.md  README.md  next.config.js  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/advanced-search/: page.tsx
frontend/src/app/affiliate/: page.tsx
frontend/src/app/ai-features/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: book-card.tsx  book-carousel.tsx  book-grid.tsx  error-boundary.tsx  footer.tsx  header.tsx  loading.tsx  navbar.tsx  search-bar-enhanced.tsx  search-bar.tsx  sidebar.tsx  skeleton.tsx
frontend/src/hooks/: use-books.ts  use-intersection-observer.ts
frontend/src/types/: index.ts
models/: __init__.py  book.py  user.py
services/: __init__.py  advanced_features.py  analytics.py  api_management.py  api_providers.py  auth.py  cache.py  celery_app.py  educational_features.py  gamification.py  gemini_service.py  innovative_features.py  integrations.py  ml_recommender.py  monetization.py  personalization.py  recommendation_engine.py  scalability.py  search_service.py  security.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
ui/: __init__.py  cli.py
utils/: __init__.py  formatters.py  validators.py
(+34 files in other folders)
